TRIVIAL Fixing SonarQube project key and metadata

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: System
 metadata:
   name: public-disclosures
   description: Repository contains required information by MITRE to reveal details of the CVE
   annotations:
     backstage.io/techdocs-ref: .
-    sonarqube.org/project-key: "com.jamf.public-disclosures"
+    sonarqube.org/project-key: "com.wandera.public-disclosures"
   tags:
   - security
   - cve
@@ -13,4 +13,4 @@ spec:
   type: website
   lifecycle: production
   owner: appsec
-  system: secops-browser-extension
+  system: public-disclosures
